UNRELEASED  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.1
	q_vvx_worker config is optional and defaults when missing.
	q_vvx_worker preloads additional GPU libraries from additional_libraries.
	q_vvx_worker logs model load errors with style id and model path.
	q_vvx_worker adds a --gpu flag to opt into GPU synthesis (CPU by default).


2025-12-28  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.0
	Added q_vvx_bench for scenario-based synthesize benchmarking.
	Added q_vvx_worker with dynamic speaker model loading and wake queue flow.
	Updated super_simple_tts job routing for per-speaker queues.
	Renamed super_simple_tts RPC to synthesize.
	Removed q_vvx_engine configuration and module.


2025-12-25  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.1.0
	Initial setup.