@@ -105,6 +105,9 @@
             q_vvx_worker_sup => #{
                 worker_count => 2
             }
+          , q_vvx_worker => #{
+                use_gpu => false
+            }
           , q_vvx_core => #{
                 wav_s3_profiles => [q_vvx_wav]
             }
