@@ -5,6 +5,7 @@ UNRELEASED  ts-klassen  <qrpc@su-shiki.com>
 	q_vvx_worker preloads additional GPU libraries from additional_libraries.
 	q_vvx_worker logs model load errors with style id and model path.
 	q_vvx_worker adds a --gpu flag to opt into GPU synthesis (CPU by default).
+	q_vvx_worker adds subsystem config use_gpu to append --gpu to workers.
 
 
 2025-12-28  ts-klassen  <qrpc@su-shiki.com>
